# fastapi-self-project

./: .env  .env-non-dev  .gitignore  .test.env  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 0493a8ffe06c_add_more_models.py  0e5ad8e14a2a_initial.py  2024_04_27_1142-460bf4e49de4_fix_position_model.py  2024_04_29_0927-d4158296591c_fix_position_model.py  2024_04_29_1153-e5af2d968842_delete_position_model_fields.py  2024_04_29_1928-4f2442d5469c_add_struct_position_model.py  2024_04_29_2012-888d662c3aa3_fix_struct_position_model.py  2024_04_29_2023-111a425d8d16_fix_struct_position_model.py  21814916d4f2_fix_fields.py  3a812257add8_fix_invite_model.py  63d498dd10ab_fix_field_password.py  6d5157cbd0c0_fix_user_model.py  8f446c28f062_fix_fields_and.py  9ce38ff62ed4_fix_account_model.py  9da1e217e4bb_add_account_model.py  a92222dd9339_add_role_model.py  d70802a638fe_add_task_observertask_and_performer_.py  f0096acce1f0_add_invite_model.py  fc0d068bd54d_fix_field_task_model.py
postgres/: Dockerfile
src/: __init__.py  config.py  custom_types.py  database.py  main.py
src/auth/: models.py  router.py  schema.py  service.py  validators.py
src/database/: database.py
src/models/: __init__.py  account.py  company.py  division.py  invite.py  position.py  role.py  task.py  user.py
src/registration/: models.py  router.py  schema.py  service.py  utils.py
src/schemas/: division.py  employee.py  login.py  registration.py  task.py
src/services/: division.py  registration.py  (+3 more)
tests/: conftest.py
(+23 files in other folders)
