[tool.poetry]
name = "fastapi-self-project"
version = "0.1.0"
description = ""
authors = ["Nikita Ostapenko <wnikx79@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.110.1"}
python-dotenv = "^1.0.1"
pytest = "^8.1.1"
sqlalchemy = "^2.0.29"
ruff = "^0.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
