[tool.poetry]
name = "fastapi-self-project"
version = "0.1.0"
description = ""
authors = ["Nikita Ostapenko <wnikx79@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.110.1"}
python-dotenv = "^1.0.1"
pytest = "^8.1.1"
sqlalchemy = "^2.0.29"
ruff = "^0.3.7"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pyjwt = "^2.8.0"
passlib = "^1.7.4"
pytest-dotenv = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
